--- a/package.json
+++ b/package.json
@@ -5,9 +5,13 @@
   "dependencies": {
     "classnames": "^2.2.6",
     "react": "^16.6.1",
+    "react-addons-css-transition-group": "^15.6.2",
     "react-dom": "^16.6.1",
+    "react-redux": "^5.1.1",
     "react-scripts": "2.1.1",
-    "react-switch": "^3.0.4"
+    "react-switch": "^3.0.4",
+    "redux": "^4.0.1",
+    "redux-logger": "^3.0.6"
   },
   "scripts": {
     "start": "react-scripts start",
